[gd_scene load_steps=11 format=3 uid="uid://djl0p7cgk73ia"]

[ext_resource type="Script" path="res://flamethrower/flame_thrower.gd" id="1_bwu02"]
[ext_resource type="PackedScene" uid="uid://yol28w5xpoou" path="res://flamethrower/cube01.glb" id="3_l2jvx"]

[sub_resource type="Gradient" id="Gradient_fcbyw"]
offsets = PackedFloat32Array(0, 0.245495, 0.932432)
colors = PackedColorArray(1, 0.782389, 0.066251, 1, 1, 0.0213755, 0, 1, 1, 0.0196078, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dgkj5"]
gradient = SubResource("Gradient_fcbyw")

[sub_resource type="Curve" id="Curve_h6nc1"]
_data = [Vector2(0.00678733, 0.420318), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4nc4c"]
curve = SubResource("Curve_h6nc1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_s4elq"]
direction = Vector3(2.08165e-12, 2.08165e-12, -1)
spread = 2.0
initial_velocity_min = 15.0
initial_velocity_max = 15.0
gravity = Vector3(2.08165e-12, 0.25, 2.08165e-12)
linear_accel_max = 2.08167e-15
damping_min = 8.0
damping_max = 10.0
scale_min = 2.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_4nc4c")
color_ramp = SubResource("GradientTexture1D_dgkj5")
hue_variation_max = 0.06

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7te23"]
transparency = 1
vertex_color_use_as_albedo = true
emission_enabled = true
emission = Color(0.968627, 0.117647, 0.101961, 1)
emission_energy_multiplier = 2.25

[sub_resource type="SphereMesh" id="SphereMesh_52pfu"]
material = SubResource("StandardMaterial3D_7te23")
radius = 0.25
height = 0.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5n0av"]
height = 12.3532
radius = 0.810962

[node name="FlameThrower" type="Node3D"]
script = ExtResource("1_bwu02")

[node name="Fire" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.42472)
amount = 50
lifetime = 1.5
local_coords = true
process_material = SubResource("ParticleProcessMaterial_s4elq")
draw_pass_1 = SubResource("SphereMesh_52pfu")

[node name="OnTimer" type="Timer" parent="."]
one_shot = true

[node name="OffTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(2.08165e-12, 2.08165e-12, -5)
collision_mask = 2

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, -1.5246e-23, -1.5246e-23, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -7.76953)
shape = SubResource("CylinderShape3D_5n0av")

[node name="cube01" parent="." instance=ExtResource("3_l2jvx")]

[connection signal="timeout" from="OnTimer" to="." method="_on_on_timer_timeout"]
[connection signal="timeout" from="OffTimer" to="." method="_on_off_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
